
erDiagram

Resort ||--o{ Park: "is part of"
Resort ||--|| Location: "is on"
Resort ||--|| ResortType : "has type"

Park ||--|| Location: "is on"
Park ||--|| ParkType: "has type"


ParkType {
    uuid id
    timestamp createdAt
    User createdBy
    User updatedBy
    timestamp updatedAt
    varchar type
    text description
}
ResortType {
    uuid id
    timestamp createdAt
    User createdBy
    User updatedBy
    timestamp updatedAt
    varchar type
    text description
}

Park {
    timestamp createdAt
    timestamp updatedAt
    varchar(255) name
    varchar(1024) description
    Date openingDate
    Date closingDate
    uuid parkTypeId
}

Park {
    varchar name
    varchar description
    timestamp openingDate
    timestamp closingDate
}
Resort {
    timestamp createdAt
    timestamp updatedAt
    varchar(255) name
    varchar(1024) description
    Date openingDate
    Date closingDate
}

Location {
    varchar address
    varchar city
    varchar country
    varchar gpsLong
    varchar gpsLat
}